@@ -101,6 +101,7 @@ It is executed when object is destroyed during gc. It had a lot of inherent issu
 |       `-XX:+UseParallelGC`        |                                                                                          use parallel gc                                                                                          |
 |     `-XX:+UseConcMarkSweepGC`     |                                                                                         use concurrent gc                                                                                         |
 |          `-XX:+UseG1GC`           |                                                                                         use concurrent gc                                                                                         |
+| ` -XX:+UseZGC -XX:+ZGenerational` |                                                                                        use concurrent zgc                                                                                         |
 |   `-XX:UseStringDeDuplication`    |                                          available in g1gc only. if non string pool strings are having same value and useful in a memory constrained env                                          |
 ### Memory Leaks
 #### JVisualVM
@@ -112,3 +113,5 @@ Can be used to see memory growth
 * LLMs
 * https://stackoverflow.com/questions/10578984/what-is-java-string-interning
 * https://www.geeksforgeeks.org/interning-of-string/
+* https://inside.java/2023/11/28/gen-zgc-explainer/
+* https://medium.com/@roopa.kushtagi/netflixs-journey-from-g1gc-to-zgc-tackling-tail-latencies-66ee75681d49
